# ws-scrcpy-web

./: .gitattributes  .gitignore  .npmrc  CHANGELOG.md  Cargo.toml  Dockerfile  PRIVACY.md  README.md  RELEASE_NOTES.md  THIRD-PARTY-NOTICES.md  biome.json  package-lock.json  package.json  start.cmd  start.sh  tsconfig.json  vitest.config.ts  vitest.globalSetup.ts
.cargo/: config.toml
.github/state/: node-pty-prebuilds-state.json
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml.disabled  node-pty-prebuilds.yml  release.yml
common/src/: control_marker.rs  lib.rs  tray.rs
dependencies/: README.md
docs/: PROGRAMDATA-MIGRATION.md  RELEASING.md  TAILSCALE_ANDROID_TEST.md  TECHNICAL_GUIDE.md
docs/plans/: 2026-04-10-sp2-scrcpy-v3-protocol.md  2026-04-11-sp3-3-video-codecs.md  2026-04-11-sp3-4-audio-codecs.md  2026-04-11-sp3-5-uhid-keyboard-mouse.md  sp3-p2-contracts.md  sp3-p6-contracts.md
launcher/: Cargo.toml
launcher/src/: config.rs  elevated_runner.rs  hooks.rs  job_object.rs  log.rs  main.rs  paths.rs  single_instance.rs  spawn.rs  supervisor.rs  tray.rs  user_session_spawn.rs
launcher/tests/: print_active_session.rs
public/: embed.html  index.html
scripts/: assert-version-sync.mjs  bump-version.mjs  compute-matrix-versions.mjs  dev-supervisor.mjs  extract-changelog.mjs  fetch-prebuilts.mjs  package-linux.mjs  probe-option-d.mjs  stage-publish.mjs  stage-seed-scrcpy-server.mjs  swap-appimage-runtime.mjs
src/app/: Rect.ts  (+11 more)
tray/: Cargo.toml
webpack/: ws-scrcpy-web.common.ts  ws-scrcpy-web.dev.ts  ws-scrcpy-web.prod.ts  ws-scrcpy.common.ts
(+289 files in other folders)
